--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,57 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+#wrapper {
+  height: 100vh;
+  width: 100%;
+  background-color: grey;
+}
+
+
+
+main {
+  /* width: calc(100% - 300px); */
+  width: 100%;
+  height: calc(100% - 100px);
+  display: flex;
+  /* overflow: scroll; */
+}
+
+/* clearfix main */
+main::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+nav {
+  width: 300px;
+  height: 100%;
+  background-color: red;
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  float: left;
+}
+
+#main_section {
+  width: calc(100% - 300px);
+  float: left;
+  /* background-color: blue; */
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+
+
+
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  position: fixed;
+  bottom: 0;
+
+}
