--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,12 @@
 }
 
 
+/* MAIN */
 
 main {
-  /* width: calc(100% - 300px); */
   width: 100%;
   height: calc(100% - 100px);
   display: flex;
-  /* overflow: scroll; */
 }
 
 /* clearfix main */
@@ -28,28 +27,49 @@ main::after {
   clear: both;
 }
 
+/* NAV colonna sinistra della pagina */
 nav {
   width: 300px;
-  height: 100%;
+  height: calc(100% - 100px);
   background-color: red;
-  /* position: fixed; */
   top: 0;
   left: 0;
   float: left;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
 }
+
+.top_nav {
+  height: 50%;
+  width: calc (100% - 20px);
+  margin: 10px;
+  background-color: lightblue;
+}
+
+
+.bottom_nav {
+  height: 50%;
+  width: calc (100% - 20px);
+  margin: 10px;
+  background-color: lightblue;
+}
+
+
+/* / NAV colonna sinistra della pagina */
 
 #main_section {
   width: calc(100% - 300px);
+  margin-left: 300px;
   float: left;
-  /* background-color: blue; */
+  background-color: blue;
   overflow-y: auto;
-  overflow-x: hidden;
 }
 
 
+/* / MAIN */
 
-
-
+/* FOOTER */
 footer {
   width: 100%;
   height: 100px;
@@ -58,3 +78,6 @@ footer {
   bottom: 0;
 
 }
+
+
+/* / FOOTER */
