--- a/css/style.css
+++ b/css/style.css
@@ -28,36 +28,65 @@ main::after {
 }
 
 /* NAV colonna sinistra della pagina */
-nav {
+nav#main_nav {
   width: 300px;
   height: calc(100% - 100px);
+  min-height: 500px;
   background-color: red;
-  top: 0;
-  left: 0;
-  float: left;
   position: fixed;
   display: flex;
   flex-direction: column;
 }
 
 .top_nav {
-  height: 50%;
-  width: calc (100% - 20px);
+  height: 80%;
+  width: calc(100% - 20px);
   margin: 10px;
   background-color: lightblue;
+  display: flex;
+  flex-direction: column;
 }
 
+
+
+#main_nav .top_nav .logo_nav {
+  width: 100%;
+  height: 100px;
+  background-color: yellow;
+}
+
+#main_nav .top_nav .menu_nav {
+  width: 100%;
+  height: 100px;
+  background-color: yellow;
+}
+
+#main_nav .top_nav .playlist_nav {
+  width: 100%;
+  height: calc(100% - 200px);
+  background-color: yellow;
+}
 
 .bottom_nav {
-  height: 50%;
-  width: calc (100% - 20px);
+  height: 20%;
+  width: calc(100% - 20px);
   margin: 10px;
   background-color: lightblue;
+  display: flex;
+  flex-direction: column;
 }
+
+#main_nav .bottom_nav .install_nav {
+  height: 50%;
+  width: 100%;
+  border-bottom: 1px solid white;
+}
+
 
 
 /* / NAV colonna sinistra della pagina */
 
+/* MAIN SECTION */
 #main_section {
   width: calc(100% - 300px);
   margin-left: 300px;
@@ -66,7 +95,60 @@ nav {
   overflow-y: auto;
 }
 
+/* / NAV colonna sinistra della pagina */
 
+#main_section .call_to_action {
+  height: 100px;
+  width: calc(100% - 300px);
+  background-color: rgba(0, 0, 0, 0.68);
+  text-align: right;
+  line-height: 100px;
+  position: fixed;
+  /* top: 0; */
+  color: white;
+  z-index: 1;
+}
+
+.call_to_action a {
+  color: white;
+}
+
+#main_section .menu_main {
+  text-align: center;
+  margin-top: 100px;
+}
+#main_section .menu_main ul li {
+  display: inline-block;
+  padding: 10px;
+}
+
+
+/* MAIN CONTENT contenitore dei contenuti  */
+
+.main_content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: coral;
+}
+
+.main_content > section {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.title_section {
+  width: 100%;
+}
+
+.played_box {
+  height: 100px;
+  background-color: red;
+}
+/* / MAIN CONTENT sezione dei contenuti */
+/* / MAIN SECTION */
 /* / MAIN */
 
 /* FOOTER */
