--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,19 @@ main::after {
 
 /* NAV colonna sinistra della pagina */
 nav#main_nav {
-  width: 300px;
+  width: 250px;
   height: calc(100% - 100px);
   min-height: 450px;
   background-color: red;
   position: fixed;
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (max-width: 600px) {
+  nav#main_nav {
+    width: 50px;
+  }
 }
 
 .top_nav {
@@ -94,18 +100,28 @@ nav#main_nav {
 
 /* MAIN SECTION */
 #main_section {
-  width: calc(100% - 300px);
-  margin-left: 300px;
+  width: calc(100% - 250px);
+  margin-left: 250px;
   float: left;
   background-color: blue;
   overflow-y: auto;
+}
+
+@media screen and (max-width: 600px) {
+  #main_section {
+    width: calc(100% - 50px);
+    margin-left: 50px;
+    /* float: left;
+    background-color: blue;
+    overflow-y: auto; */
+  }
 }
 
 /* / NAV colonna sinistra della pagina */
 
 #main_section .call_to_action {
   height: 100px;
-  width: calc(100% - 300px);
+  width: calc(100% - 250px);
   background-color: rgba(0, 0, 0, 0.68);
   text-align: right;
   line-height: 100px;
@@ -113,6 +129,14 @@ nav#main_nav {
   /* top: 0; */
   color: white;
   z-index: 1;
+}
+
+@media screen and (max-width: 600px) {
+  #main_section .call_to_action {
+    height: 100px;
+    width: calc(100% - 50px);
+
+  }
 }
 
 .call_to_action a {
